[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/level_zombi/level2/enemies/Zjaique/jaique_zombi.png" type="Texture" id=1]
[ext_resource path="res://levels/level_zombi/level2/enemies/Zjaique/Z_jaique.gd" type="Script" id=2]
[ext_resource path="res://levels/level_zombi/level2/enemies/Zjaique/collision_jaique_zombie.tscn" type="PackedScene" id=3]

[node name="Z_jaique" type="Area2D"]
position = Vector2( 1.5874, -36.5103 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8.34108, -232.694 )
scale = Vector2( 0.789372, 0.791687 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 8.57031, -231.728 )
scale = Vector2( 0.769814, 0.782141 )

[node name="shoot_J_Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Position_Zjaique1" type="Position2D" parent="."]
position = Vector2( 97.4707, 644.154 )

[node name="Position_Zjaique2" type="Position2D" parent="."]
position = Vector2( 900.018, 647.458 )

[node name="Position_Zjaique_down" type="Position2D" parent="."]
position = Vector2( 511.821, 656.091 )

[node name="Timer_Zjaique" type="Timer" parent="."]
autostart = true

[node name="Timer_Zjaique_down" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_enemy_zombi_3_area_entered"]
[connection signal="timeout" from="shoot_J_Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Zjaique" to="." method="_on_Timer_Zjaique_timeout"]
[connection signal="timeout" from="Timer_Zjaique_down" to="." method="_on_Timer_Zjaique_down_timeout"]
